--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nutrition",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://JohnNilsson.github.io/nutrition",
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -11,6 +12,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
   }
 }
