--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^1.0.0"
+    "gh-pages": "^1.0.0",
+    "lerna": "^2.0.0"
   }
 }
