--- a/packages/swedish-food-composition-database/package.json
+++ b/packages/swedish-food-composition-database/package.json
@@ -18,10 +18,11 @@
   },
   "homepage": "https://github.com/JohnNilsson/nutrition#readme",
   "devDependencies": {
+    "JSONStream": "^1.3.1",
     "download": "^6.2.5",
+    "multi-progress": "^2.0.0",
     "node-expat": "^2.3.16",
-    "ora": "^1.3.0",
-    "progress": "^2.0.0"
+    "ora": "^1.3.0"
   },
   "dependencies": {
     "brotli": "^1.3.2"
