Add snappy and lzma compression

--- a/packages/swedish-food-composition-database/Makefile
+++ b/packages/swedish-food-composition-database/Makefile
@@ -1,5 +1,14 @@
-dist/Naringsvarde.6NF.json.br: dist/Naringsvarde.6NF.json
-	scripts/compress < $< > $@
+.PHONY : all
+all: dist/Naringsvarde.6NF.json.brotli dist/Naringsvarde.6NF.json.snappy dist/Naringsvarde.6NF.json.lzma
+
+dist/Naringsvarde.6NF.json.brotli: dist/Naringsvarde.6NF.json
+	scripts/compress brotli < $< > $@
+
+dist/Naringsvarde.6NF.json.snappy: dist/Naringsvarde.6NF.json
+	scripts/compress snappy < $< > $@
+
+dist/Naringsvarde.6NF.json.lzma: dist/Naringsvarde.6NF.json
+	scripts/compress lzma < $< > $@
 
 dist/Naringsvarde.6NF.json: xml/Naringsvarde.xml
 	scripts/transform < $< > $@
