--- a/packages/swedish-food-composition-database/package.json
+++ b/packages/swedish-food-composition-database/package.json
@@ -20,7 +20,9 @@
   "devDependencies": {
     "JSONStream": "^1.3.1",
     "iltorb": "^1.3.6",
-    "node-expat": "^2.3.16"
+    "lzma-native": "^3.0.1",
+    "node-expat": "^2.3.16",
+    "snappy-stream": "^2.0.0"
   },
   "dependencies": {}
 }
