Better makefile and another compression algorithm

--- a/packages/swedish-food-composition-database/Makefile
+++ b/packages/swedish-food-composition-database/Makefile
@@ -1,22 +1,26 @@
 VERSION     := 20170314
 BASE_URI    := http://www7.slv.se/apilivsmedel/LivsmedelService.svc/Livsmedel
 URI         := $(BASE_URI)/Naringsvarde/$(VERSION)
-XML         := xml/Naringsvarde.xml
+XML         := data/Naringsvarde.xml
 TRANSFORMS  := 6NF
-TRANSFORMED := dist/Naringsvarde.6NF.json
-COMPRESSION := brotli snappy lzma
+TRANSFORMED := $(foreach transform,$(TRANSFORMS),data/Naringsvarde.$(transform).json)
+COMPRESSION := brotli snappy lzma lzf
 COMPRESSED  := $(foreach algorithm,$(COMPRESSION),$(foreach json,$(TRANSFORMED),$(json).$(algorithm)))
 
 .PHONY: all
 .DELETE_ON_ERROR:
+.SECONDEXPANSION:
 
 all: $(COMPRESSED)
 
-$(COMPRESSED): $(TRANSFORMED)
+$(COMPRESSED): $$(basename $$@)
+	@mkdir -p $(@D)
 	./compress $(subst .,,$(suffix $@)) < $< > $@
 
-$(TRANSFORMED): $(XML)
-	./transform < $< > $@
+data/Naringsvarde.%.json: $(XML)
+	@mkdir -p $(@D)
+	./transform $* < $< > $@
 
 $(XML):
+	@mkdir -p $(@D)
 	curl $(URI) --output $@
