--- a/packages/swedish-food-composition-database/package.json
+++ b/packages/swedish-food-composition-database/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node ./src/build.js",
+    "build": "make",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/JohnNilsson/nutrition#readme",
   "devDependencies": {
     "JSONStream": "^1.3.1",
+    "get-stdin": "^5.0.1",
     "iltorb": "^1.3.6",
+    "lzfjs": "^1.0.1",
     "lzma-native": "^3.0.1",
     "node-expat": "^2.3.16",
     "snappy-stream": "^2.0.0"
