--- a/packages/swedish-food-composition-database/Makefile
+++ b/packages/swedish-food-composition-database/Makefile
@@ -2,7 +2,7 @@ VERSION     := 20170314
 BASE_URI    := http://www7.slv.se/apilivsmedel/LivsmedelService.svc/Livsmedel
 URI         := $(BASE_URI)/Naringsvarde/$(VERSION)
 XML         := data/Naringsvarde.xml
-TRANSFORMS  := 6NF
+TRANSFORMS  := 6NF 5NF
 TRANSFORMED := $(foreach transform,$(TRANSFORMS),data/Naringsvarde.$(transform).json)
 COMPRESSION := brotli snappy lzma lzf
 COMPRESSED  := $(foreach algorithm,$(COMPRESSION),$(foreach json,$(TRANSFORMED),$(json).$(algorithm)))
