--- a/packages/swedish-food-composition-database/package.json
+++ b/packages/swedish-food-composition-database/package.json
@@ -19,11 +19,14 @@
   "homepage": "https://github.com/JohnNilsson/nutrition#readme",
   "devDependencies": {
     "JSONStream": "^1.3.1",
+    "borc": "^2.0.2",
+    "bson": "^1.0.4",
     "get-stdin": "^5.0.1",
     "iltorb": "^1.3.6",
     "lzfjs": "^1.0.1",
     "lzma-native": "^3.0.1",
     "moment-timezone": "^0.5.13",
+    "msgpack-lite": "^0.1.26",
     "node-expat": "^2.3.16",
     "pson": "^2.0.0",
     "snappy-stream": "^2.0.0"
