--- a/packages/swedish-food-composition-database/package.json
+++ b/packages/swedish-food-composition-database/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "make",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape 'src/**/*.test.js'"
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,8 @@
     "msgpack-lite": "^0.1.26",
     "node-expat": "^2.3.16",
     "pson": "^2.0.0",
-    "snappy-stream": "^2.0.0"
+    "snappy-stream": "^2.0.0",
+    "tape": "^4.8.0"
   },
   "dependencies": {}
 }
