--- a/packages/swedish-food-composition-database/package.json
+++ b/packages/swedish-food-composition-database/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "make",
-    "test": "tape 'src/**/*.test.js'"
+    "test": "tape 'src/**/*.test.js' | faucet"
   },
   "repository": {
     "type": "git",
@@ -19,12 +19,15 @@
   "homepage": "https://github.com/JohnNilsson/nutrition#readme",
   "devDependencies": {
     "JSONStream": "^1.3.1",
+    "benchmark": "^2.1.4",
     "borc": "^2.0.2",
     "bson": "^1.0.4",
+    "faucet": "0.0.1",
     "get-stdin": "^5.0.1",
     "iltorb": "^1.3.6",
     "lzfjs": "^1.0.1",
     "lzma-native": "^3.0.1",
+    "microtime": "^2.1.6",
     "moment-timezone": "^0.5.13",
     "msgpack-lite": "^0.1.26",
     "node-expat": "^2.3.16",
