--- a/packages/swedish-food-composition-database/package.json
+++ b/packages/swedish-food-composition-database/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/JohnNilsson/nutrition#readme",
   "devDependencies": {
     "JSONStream": "^1.3.1",
+    "avsc": "^5.0.6",
     "benchmark": "^2.1.4",
     "borc": "^2.0.2",
     "bson": "^1.0.4",
