--- a/packages/swedish-food-composition-database/package.json
+++ b/packages/swedish-food-composition-database/package.json
@@ -32,6 +32,7 @@
     "moment-timezone": "^0.5.13",
     "msgpack-lite": "^0.1.26",
     "node-expat": "^2.3.16",
+    "protobufjs": "^6.8.0",
     "pson": "^2.0.0",
     "snappy-stream": "^2.0.0",
     "tape": "^4.8.0"
