--- a/packages/swedish-food-composition-database/package.json
+++ b/packages/swedish-food-composition-database/package.json
@@ -22,11 +22,13 @@
     "avsc": "^5.0.6",
     "benchmark": "^2.1.4",
     "borc": "^2.0.2",
+    "brotli": "^1.3.2",
     "bson": "^1.0.4",
     "faucet": "0.0.1",
     "get-stdin": "^5.0.1",
     "iltorb": "^1.3.6",
     "lzfjs": "^1.0.1",
+    "lzma": "^2.3.2",
     "lzma-native": "^3.0.1",
     "microtime": "^2.1.6",
     "moment-timezone": "^0.5.13",
