Test the 6NF proto-file

--- a/packages/swedish-food-composition-database/package.json
+++ b/packages/swedish-food-composition-database/package.json
@@ -21,6 +21,7 @@
     "JSONStream": "^1.3.1",
     "avsc": "^5.0.6",
     "benchmark": "^2.1.4",
+    "blue-tape": "^1.0.0",
     "borc": "^2.0.2",
     "brotli": "^1.3.2",
     "bson": "^1.0.4",
@@ -37,7 +38,8 @@
     "protobufjs": "^6.8.0",
     "pson": "^2.0.0",
     "snappy-stream": "^2.0.0",
-    "tape": "^4.8.0"
+    "tape": "^4.8.0",
+    "xml2js": "^0.4.19"
   },
   "dependencies": {}
 }
