--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "homepage": "http://JohnNilsson.github.io/nutrition",
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-scripts": "1.0.11"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-scripts": "^1.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,6 +20,6 @@
   },
   "devDependencies": {
     "gh-pages": "^1.0.0",
-    "lerna": "^2.0.0"
+    "lerna": "^2.4.0"
   }
 }
