Rename app project

--- a/packages/nutrition-app/package.json
+++ b/packages/nutrition-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nutrition",
+  "name": "nutrition-app",
   "description": "An application to plan a well balanced diet",
   "version": "0.1.0",
   "license": "UNLICENSED",
