--- a/packages/nutrition-app/package.json
+++ b/packages/nutrition-app/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "^1.0.14",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.75.1"
+    "swedish-food-composition-database": "file:../swedish-food-composition-database"
   },
   "scripts": {
     "start": "react-scripts start",
