--- a/packages/nutrition-app/package.json
+++ b/packages/nutrition-app/package.json
@@ -6,11 +6,11 @@
   "private": true,
   "homepage": "http://JohnNilsson.github.io/nutrition",
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-scripts": "^1.0.14",
-    "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.75.1"
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-scripts": "^1.1.4",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-react": "^0.80.2",
     "swedish-food-composition-database": "file:../swedish-food-composition-database"
   },
   "scripts": {
@@ -22,6 +22,6 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^1.0.0"
+    "gh-pages": "^1.1.0"
   }
 }
