--- a/nutrition-app/package.json
+++ b/nutrition-app/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-virtualized": "^9.21.0",
     "semantic-ui-css": "^2.4.0",
     "semantic-ui-react": "^0.82.5",
     "swedish-food-composition-database": "file:../swedish-food-composition-database"
@@ -25,6 +26,7 @@
     "@types/node": "^10.12.9",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
+    "@types/react-virtualized": "^9.18.9",
     "gh-pages": "^2.0.1",
     "react-scripts": "^2.0.4",
     "typescript": "^3.1.6"
