--- a/nutrition-app/package.json
+++ b/nutrition-app/package.json
@@ -19,7 +19,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "prettier": "prettier --write 'public/**/*.html' 'src/**/*.[tj]s{x,}'"
   },
   "devDependencies": {
     "@types/jest": "^24.0.9",
