--- a/nutrition-app/tsconfig.json
+++ b/nutrition-app/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2018",
+    "experimentalDecorators": true,
     "allowJs": true,
     "skipLibCheck": false,
     "esModuleInterop": true,
@@ -13,13 +14,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ]
+    "lib": ["dom", "dom.iterable", "esnext"]
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
