--- a/nutrition-app/package.json
+++ b/nutrition-app/package.json
@@ -7,7 +7,7 @@
   "homepage": "http://JohnNilsson.github.io/nutrition",
   "dependencies": {
     "mobx": "^5.10.1",
-    "mobx-react": "^6.1.1",
+    "mobx-react-lite": "^1.4.1",
     "mobx-state-tree": "^3.14.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
