--- a/nutrition-app/package.json
+++ b/nutrition-app/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "homepage": "http://JohnNilsson.github.io/nutrition",
   "dependencies": {
+    "lodash-es": "4.17.11",
     "mobx": "^5.10.1",
     "mobx-react-lite": "^1.4.1",
     "mobx-state-tree": "^3.14.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.15",
+    "@types/lodash-es": "4.17.3",
     "@types/node": "^12.0.10",
     "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
