--- a/nutrition-app/package.json
+++ b/nutrition-app/package.json
@@ -7,14 +7,14 @@
   "homepage": "http://JohnNilsson.github.io/nutrition",
   "dependencies": {
     "lodash-es": "4.17.11",
-    "mobx": "^5.10.1",
-    "mobx-react-lite": "^1.4.1",
+    "mobx": "^5.11.0",
+    "mobx-react-lite": "next",
     "mobx-state-tree": "^3.14.0",
     "mobx-utils": "5.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.3",
+    "react-window": "^1.8.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.2",
     "swedish-food-composition-database": "file:../swedish-food-composition-database"
@@ -31,8 +31,8 @@
   "devDependencies": {
     "@types/jest": "^24.0.15",
     "@types/lodash-es": "4.17.3",
-    "@types/node": "^12.0.10",
-    "@types/react": "^16.8.22",
+    "@types/node": "^12.0.12",
+    "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.0",
