Update declared licnese

--- a/swedish-food-composition-database/package.json
+++ b/swedish-food-composition-database/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/JohnNilsson/nutrition.git"
   },
   "author": "John Nilsson <john@milsson.nu>",
-  "license": "ISC",
+  "license": "CC0-1.0",
   "bugs": {
     "url": "https://github.com/JohnNilsson/nutrition/issues"
   },
