--- a/nutrition-app/package.json
+++ b/nutrition-app/package.json
@@ -6,17 +6,20 @@
   "private": true,
   "homepage": "http://JohnNilsson.github.io/nutrition",
   "dependencies": {
-    "lodash-es": "4.17.11",
+    "@types/rc-slider": "^8.6.4",
+    "lodash-es": "4.17.14",
     "mobx": "^5.11.0",
     "mobx-react-lite": "next",
     "mobx-state-tree": "^3.14.0",
     "mobx-utils": "5.4.1",
+    "nordic-nutrition-recommendations": "file:../nordic-nutrition-recommendations",
+    "rc-slider": "^8.6.13",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.4",
+    "react-window": "^1.8.5",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.87.2",
+    "semantic-ui-react": "^0.87.3",
     "swedish-food-composition-database": "file:../swedish-food-composition-database"
   },
   "scripts": {
@@ -31,14 +34,14 @@
   "devDependencies": {
     "@types/jest": "^24.0.15",
     "@types/lodash-es": "4.17.3",
-    "@types/node": "^12.0.12",
+    "@types/node": "^12.6.8",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.0",
     "gh-pages": "^2.0.1",
     "react-scripts": "^3.0.1",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.3"
   },
   "browserslist": [
     ">0.2%",
