--- a/nutrition-app/package.json
+++ b/nutrition-app/package.json
@@ -10,8 +10,8 @@
     "mobx": "^5.15.0",
     "mobx-react-lite": "next",
     "mobx-state-tree": "^3.15.0",
-    "mobx-utils": "5.5.2",
     "rc-slider": "^8.7.1",
+    "mobx-utils": "^5.5.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-virtualized-auto-sizer": "^1.0.2",
@@ -38,9 +38,12 @@
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.1",
     "@types/rc-slider": "^8.6.5",
+    "fibers": "^4.0.2",
     "gh-pages": "^2.1.1",
+    "node-sass": "^4.13.1",
     "react-scripts": "^3.2.0",
-    "typescript": "^3.7.2"
+    "sass": "^1.25.0",
+    "typescript": "^3.7.5"
   },
   "browserslist": [
     ">0.2%",
