--- a/nutrition-app/package.json
+++ b/nutrition-app/package.json
@@ -7,42 +7,40 @@
   "homepage": "http://JohnNilsson.github.io/nutrition",
   "dependencies": {
     "lodash-es": "4.17.15",
-    "mobx": "^5.15.0",
-    "mobx-react-lite": "next",
-    "mobx-state-tree": "^3.15.0",
-    "rc-slider": "^8.7.1",
-    "mobx-utils": "^5.5.3",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "mobx": "5.15.5",
+    "mobx-react-lite": "2.0.7",
+    "mobx-state-tree": "^3.17.2",
+    "mobx-utils": "^5.6.1",
+    "rc-slider": "^9.3.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.1",
+    "semantic-ui-react": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "yarn run build && gh-pages -d build",
     "prettier": "prettier --write 'public/**/*.html' 'src/**/*.[tj]s{x,}'"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.23",
-    "@types/lodash-es": "4.17.3",
-    "@types/node": "^12.12.12",
-    "@types/react": "^16.9.13",
-    "@types/react-dom": "^16.9.4",
+    "@types/jest": "^26.0.10",
+    "@types/lodash-es": "^4.17.3",
+    "@types/node": "^14.0.27",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
-    "@types/react-window": "^1.8.1",
-    "@types/rc-slider": "^8.6.5",
-    "fibers": "^4.0.2",
-    "gh-pages": "^2.1.1",
-    "node-sass": "^4.13.1",
-    "react-scripts": "^3.2.0",
-    "sass": "^1.25.0",
-    "typescript": "^3.7.5"
+    "@types/react-window": "^1.8.2",
+    "fibers": "^5.0.0",
+    "gh-pages": "^3.1.0",
+    "node-sass": "^4.14.1",
+    "react-scripts": "^3.4.3",
+    "sass": "^1.26.10",
+    "typescript": "^3.9.7"
   },
   "browserslist": [
     ">0.2%",
