--- a/swedish-food-composition-database/package.json
+++ b/swedish-food-composition-database/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "build": "make",
-    "test": "ts-node --pretty --files node_modules/tape/bin/tape 'src/**/*.test.ts' | faucet"
+    "test": "ts-node --pretty --files node_modules/tape/bin/tape 'src/**/*.test.ts'"
   },
   "repository": {
     "type": "git",
@@ -17,22 +17,20 @@
   },
   "homepage": "https://github.com/JohnNilsson/nutrition#readme",
   "devDependencies": {
-    "@types/moment-timezone": "^0.5.12",
-    "@types/node": "^12.12.5",
-    "@types/tape": "^4.2.33",
-    "JSONStream": "^1.3.5",
+    "@types/node": "^14.14.17",
+    "@types/tape": "^4.13.0",
     "benchmark": "^2.1.4",
     "blue-tape": "^1.0.0",
-    "faucet": "0.0.1",
-    "get-stdin": "^7.0.0",
-    "iltorb": "^2.4.4",
+    "get-stdin": "^8.0.0",
+    "iltorb": "^2.4.5",
+    "JSONStream": "^1.3.5",
     "microtime": "^3.0.0",
-    "moment-timezone": "^0.5.27",
+    "moment-timezone": "^0.5.32",
     "node-expat": "^2.3.18",
-    "tape": "^4.11.0",
-    "ts-node": "^8.4.1",
-    "typescript": "^3.6.4",
-    "xml2js": "^0.4.22"
+    "tape": "^5.1.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3",
+    "xml2js": "^0.4.23"
   },
   "dependencies": {}
 }
