--- a/nutrition-app/package.json
+++ b/nutrition-app/package.json
@@ -44,5 +44,13 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "jest": {
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/(?!(lodash-es|rc-slider/es|rc-util/es|@babel/runtime/helpers/esm)/.*)"
+    ],
+    "moduleNameMapper": {
+      "^.+.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "<rootDir>/tests/stub"
+    }    
+  }
 }
