--- a/nutrition-app/package.json
+++ b/nutrition-app/package.json
@@ -6,17 +6,16 @@
   "private": true,
   "homepage": "http://JohnNilsson.github.io/nutrition",
   "dependencies": {
-    "lodash-es": "4.17.20",
-    "mobx": "6.0.4",
-    "mobx-react-lite": "3.1.6",
-    "mobx-state-tree": "^5.0.0",
-    "mobx-utils": "^6.0.3",
-    "rc-slider": "^9.7.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "lodash-es": "4.17.21",
+    "mobx": "6.3.0",
+    "mobx-react-lite": "3.2.0",
+    "mobx-utils": "^6.0.4",
+    "rc-slider": "^9.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-window": "^1.8.6",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.2"
+    "semantic-ui-react": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,17 +26,21 @@
     "prettier": "prettier --write 'public/**/*.html' 'src/**/*.[tj]s{x,}'"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.20",
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
+    "@babel/preset-react": "^7.13.13",
+    "@types/jest": "^26.0.22",
     "@types/lodash-es": "^4.17.4",
-    "@types/node": "^14.14.21",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.2",
     "fibers": "^5.0.0",
     "gh-pages": "^3.1.0",
-    "react-scripts": "^4.0.1",
-    "typescript": "^4.1.3"
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.2.4"
   },
   "browserslist": [
     ">0.2%",
@@ -45,6 +48,13 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-typescript",
+      "@babel/preset-react"
+    ]
+  },
   "jest": {
     "transformIgnorePatterns": [
       "<rootDir>/node_modules/(?!(lodash-es|rc-slider/es|rc-util/es|@babel/runtime/helpers/esm)/.*)"
