--- a/nutrition-app/tsconfig.json
+++ b/nutrition-app/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "target": "es2018",
-    "experimentalDecorators": true,
     "allowJs": true,
     "skipLibCheck": false,
     "esModuleInterop": true,
@@ -16,6 +15,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "useDefineForClassFields": true,
     "noEmit": true,
     "jsx": "react-jsx",
     "lib": ["dom", "dom.iterable", "esnext"]
