--- a/nutrition-app/package.json
+++ b/nutrition-app/package.json
@@ -28,8 +28,8 @@
   "devDependencies": {
     "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
-    "@babel/preset-typescript": "^7.13.0",
     "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/jest": "^26.0.22",
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^14.14.41",
@@ -41,6 +41,9 @@
     "gh-pages": "^3.1.0",
     "react-scripts": "^4.0.3",
     "typescript": "^4.2.4"
+  },
+  "resolutions": {
+    "ssri": ">=8.0.1"
   },
   "browserslist": [
     ">0.2%",
@@ -61,6 +64,6 @@
     ],
     "moduleNameMapper": {
       "^.+.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "<rootDir>/tests/stub"
-    }    
+    }
   }
 }
