--- a/swedish-food-composition-database/package.json
+++ b/swedish-food-composition-database/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "make",
-    "test": "ts-node --pretty --files node_modules/tape/bin/tape 'src/**/*.test.ts'"
+    "download-xml": "mkdir -p data && curl http://www7.slv.se/apilivsmedel/LivsmedelService.svc/Livsmedel/Naringsvarde/20220524 -o data/Naringsvarde.xml",
+    "transform-xml-to-json": "ts-node --pretty --files transform 6NF.json < data/Naringsvarde.xml > data/Naringsvarde.6NF.json",
+    "transform-xml-to-sql": "ts-node --pretty --files transform sql < data/Naringsvarde.xml > data/Naringsvarde.sql",
+    "build": "npm run transform-xml-to-json",
+    "test": "ts-node ./node_modules/tape/bin/tape src/**/*.test.ts"
   },
   "repository": {
     "type": "git",
@@ -17,19 +20,13 @@
   },
   "homepage": "https://github.com/JohnNilsson/nutrition#readme",
   "devDependencies": {
-    "@types/node": "^16.9.6",
+    "@types/node": "^18.11.18",
     "@types/tape": "^4.13.2",
-    "benchmark": "^2.1.4",
-    "blue-tape": "^1.0.0",
-    "get-stdin": "^9.0.0",
     "JSONStream": "^1.3.5",
-    "microtime": "^3.0.0",
-    "moment-timezone": "^0.5.35",
+    "moment-timezone": "^0.5.40",
     "node-expat": "^2.4.0",
     "tape": "^5.3.1",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3",
-    "xml2js": "^0.4.23"
-  },
-  "dependencies": {}
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
+  }
 }
