--- a/nutrition-app/package.json
+++ b/nutrition-app/package.json
@@ -6,16 +6,16 @@
   "private": true,
   "homepage": "http://JohnNilsson.github.io/nutrition",
   "dependencies": {
-    "lodash-es": "4.17.21",
-    "mobx": "6.3.2",
-    "mobx-react-lite": "3.2.0",
-    "mobx-utils": "^6.0.4",
-    "rc-slider": "^9.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-window": "^1.8.6",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3",
+    "lodash-es": "^4.17.21",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
+    "mobx-utils": "^6.0.5",
+    "rc-slider": "^10.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-window": "^1.8.8",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "sfcd": "file:../swedish-food-composition-database"
   },
   "scripts": {
@@ -27,13 +27,13 @@
   },
   "devDependencies": {
     "@tsconfig/strictest": "^1.0.2",
-    "@types/lodash-es": "^4.17.4",
-    "@types/react": "^17.0.16",
-    "@types/react-dom": "^17.0.9",
+    "@types/lodash-es": "^4.17.6",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
     "esbuild": "^0.16.12",
-    "gh-pages": "^3.2.3",
-    "typescript": "^4.4.2"
+    "gh-pages": "^4.0.0",
+    "typescript": "^4.9.4"
   }
 }
