--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,13 +2,8 @@
   "eslint.validate": [
     "javascript",
     "javascriptreact",
-    {
-      "language": "typescript",
-      "autoFix": true
-    },
-    {
-      "language": "typescriptreact",
-      "autoFix": true
-    }
-  ]
+    "typescript",
+    "typescriptreact"
+  ],
+  "liveServer.settings.multiRootWorkspaceName": "nutrition"
 }
