Update food composition database

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
     "typescript",
     "typescriptreact"
   ],
-  "liveServer.settings.multiRootWorkspaceName": "nutrition"
+  "prettier.requirePragma": true
 }
