--- a/swedish-food-composition-database/package.json
+++ b/swedish-food-composition-database/package.json
@@ -2,31 +2,48 @@
   "name": "swedish-food-composition-database",
   "version": "1.0.0",
   "description": "",
-  "scripts": {
-    "download-xml": "mkdir -p data && curl http://www7.slv.se/apilivsmedel/LivsmedelService.svc/Livsmedel/Naringsvarde/20220524 -o data/Naringsvarde.xml",
-    "transform-xml-to-json": "ts-node --pretty --files transform 6NF.json < data/Naringsvarde.xml > data/Naringsvarde.6NF.json",
-    "transform-xml-to-sql": "ts-node --pretty --files transform sql < data/Naringsvarde.xml > data/Naringsvarde.sql",
-    "build": "npm run transform-xml-to-json",
-    "test": "ts-node ./node_modules/tape/bin/tape src/**/*.test.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JohnNilsson/nutrition.git"
-  },
   "author": "John Nilsson <john@milsson.nu>",
   "license": "CC0-1.0",
   "bugs": {
     "url": "https://github.com/JohnNilsson/nutrition/issues"
   },
   "homepage": "https://github.com/JohnNilsson/nutrition#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JohnNilsson/nutrition.git"
+  },
+  "type": "module",
+  "exports": {
+    "./data.json": {
+      "types": "./data/Naringsvarde.6NF.d.json.ts",
+      "import": "./data/Naringsvarde.6NF.json",
+      "require": "./data/Naringsvarde.6NF.json"
+    },
+    "./data.sql": "./data/Naringsvarde.sql",
+    "./data.db": "./data/Naringsvarde.db"
+  },
+  "scripts": {
+    "download-xml": "mkdir -p data && curl http://www7.slv.se/apilivsmedel/LivsmedelService.svc/Livsmedel/Naringsvarde/20230613 -o data/Naringsvarde.xml",
+
+    "build-json": "tsx transform.ts 6NF.json < data/Naringsvarde.xml > data/Naringsvarde.6NF.json",
+    "build-sql": "tsx transform.ts sql < data/Naringsvarde.xml > data/Naringsvarde.sql",
+    "build-db": "rimraf data/Naringsvarde.db && sqlite3 data/Naringsvarde.db < data/Naringsvarde.sql",
+    "build": "npm run build-json && npm run build-sql && npm run build-db",
+
+    "test": "tsx --test src/*.test.ts"
+  },
+  "prettier": {
+    "requirePragma": true
+  },
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@types/tape": "^4.13.2",
+    "@tsconfig/node20": "^20.1.0",
+    "@tsconfig/strictest": "^2.0.1",
+    "@types/node": "^20.4.5",
     "JSONStream": "^1.3.5",
-    "moment-timezone": "^0.5.40",
+    "moment-timezone": "^0.5.43",
     "node-expat": "^2.4.0",
-    "tape": "^5.3.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "rimraf": "^5.0.1",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.6"
   }
 }
