Scaffold Tauri meal-planner app

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "javascriptreact",
     "typescript",
     "typescriptreact"
-  ]
+  ],
+  "rust-analyzer.linkedProjects": ["meal-planner/src-tauri/Cargo.toml"]
 }
