--- a/meal-planner/package.json
+++ b/meal-planner/package.json
@@ -12,15 +12,23 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@tauri-apps/api": "^1.4.0",
-    "solid-js": "^1.7.8"
+    "solid-icons": "^1.0.11",
+    "solid-js": "^1.7.11"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.4.0",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.15",
     "postcss": "^8.4.27",
+    "prettier": "^3.0.1",
+    "prettier-plugin-tailwindcss": "^0.5.2",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
-    "vite": "^4.4.7",
+    "vite": "^4.4.9",
     "vite-plugin-solid": "^2.7.0"
+  },
+  "prettier": {
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   }
 }
